# rust-playground

./: .gitignore  .replit  Dockerfile  README.md  docker-compose.yml  replit.md
.devcontainer/: devcontainer.json
attached_assets/: Pasted--Updating-crates-io-index-Locking-90-packages-to-latest_1769323041153.txt
frontend/: crates.css  crates.html  crates.js  index.html  script.js  style.css
server/: Cargo.toml
server/src/: main.rs
