[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "net", "time"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
regex = "1"
